--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
   "name": "instafetch",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
+  "description": "Ultra-futuristic Instagram video downloader - Production ready",
+  "author": "Sumon Faruki",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@tanstack/react-query": "^5.71.10",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.487.0",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hook-form": "^7.55.0",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.1.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
